--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import "@/styles/global.css";
     <title>Alliance For Birth Defect</title>
     <meta name="description" content="Alliance For Birth Defect" />
   </head>
-  <body>
+  <body class="flex min-h-screen flex-col">
     <slot />
   </body>
 </html>
